Fix one-page printing on Firefox

--- a/assets/less/main/display.less
+++ b/assets/less/main/display.less
@@ -20,6 +20,11 @@
 }
 
 @media print {
+  // Firefox one-page printing fix
+  * {
+    overflow: visible !important;
+  }
+
   .hidden-print {
     display: none !important;
   }
